# Tinymlops

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dvc.yaml  mlflow.db  params.yaml
.github/workflows/: ci.yml  dvc.yml
C/Users/USER/Tinyml-mlops-blueprint/tinyml-ops/mlruns/1/000422346ebd4df7a7b30adf42d1be05/artifacts/model_params/: deep_mlp_tanh_16_8_model_params.json
C/Users/USER/Tinyml-mlops-blueprint/tinyml-ops/mlruns/1/01633ef48a2c4950af1627a44e027c88/artifacts/model_params/: deep_mlp_tanh_8_4_adam_xavier_model_params.json
apps/: CMakeLists.txt
apps/evaluate/: main.c
apps/predict/: main.c
apps/train/: main.c
build-docker/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-docker/Testing/Temporary/: CTestCostData.txt
build-docker/apps/: CTestTestfile.cmake  cmake_install.cmake  evaluate_app  predict_app  train_app
build-docker/src/: CTestTestfile.cmake  cmake_install.cmake
build-docker/tests/: CTestTestfile.cmake  cmake_install.cmake  test_activation  test_batch_training  test_checkpoint  test_checkpoint_deep_mlp  test_checkpoint_mlp  test_checkpoint_multi  test_config  test_dataset  test_dataset_multi  test_dataset_split  test_dataset_split_three_way  test_deep_mlp  test_deep_mlp_checkpoint.txt  test_deep_mlp_forward  test_deep_mlp_train_step  test_dense  test_eval_empty_dataset  test_eval_model.txt  test_evaluate  test_hidden_layers_parse  test_linear_fit  test_loss  test_matrix  test_mlp  test_mlp_checkpoint.txt  test_mlp_forward  test_mlp_train_step  test_model  test_model.txt  test_multi_checkpoint.txt  test_norm.txt  test_normalization  test_predict  test_predict_multi  test_smoke  test_training_step
build-win/: CMakeCache.txt
configs/base/: train_linear.cfg
configs/experiments/: best_default.cfg  deep_mlp_16_8_adam_he.cfg  deep_mlp_8_4_adam_he.cfg  deep_mlp_8_4_adam_xavier.cfg  deep_mlp_relu_16_8.cfg  deep_mlp_relu_8_4.cfg  deep_mlp_tanh_16_8.cfg  deep_mlp_tanh_8_4.cfg  deep_mlp_tanh_8_4_adam_xavier.cfg  linear_adam.cfg  linear_fast.cfg  linear_long.cfg  linear_multi.cfg  mlp_long.cfg  mlp_multi.cfg  mlp_relu.cfg  mlp_relu_8_adam_he.cfg  mlp_relu_8_adam_xavier.cfg  mlp_tanh.cfg
data/samples/: linear_multi.csv
docker/: Dockerfile.dev
docs/: architecture.md  experiments.md  release-process.md  roadmap.md
include/: tinyml.h
metrics/: .gitignore  eval_metrics.json  train_metrics.json
metrics/archive/: best_default_eval_metrics.json  deep_mlp_8_4_adam_xavier_eval_metrics.json  deep_mlp_tanh_8_4_adam_xavier_train_metrics.json  deep_mlp_tanh_8_4_train_metrics.json  linear_adam_eval_metrics.json  linear_adam_train_metrics.json  linear_fast_eval_metrics.json  linear_fast_train_metrics.json  linear_long_eval_metrics.json  linear_long_train_metrics.json  linear_multi_eval_metrics.json  linear_multi_train_metrics.json  mlp_multi_train_metrics.json  mlp_relu_train_metrics.json
mlruns/1/9e269a68a095404994b4332e1e3d8cea/artifacts/metrics/: linear_long_train_metrics.json
mlruns/1/dea9de7cfe4b4d4d9c2055b44ee1e4fb/artifacts/metrics/: linear_fast_train_metrics.json
mlruns_old/540833891056875621/: meta.yaml
mlruns_old/540833891056875621/39132cfd1ec347668a34cda23ced661e/: meta.yaml
mlruns_old/540833891056875621/39132cfd1ec347668a34cda23ced661e/metrics/: bias  eval_loss  prediction_x4  train_final_loss  weight
mlruns_old/540833891056875621/39132cfd1ec347668a34cda23ced661e/params/: config_path  experiment_name
mlruns_old/540833891056875621/39132cfd1ec347668a34cda23ced661e/tags/: mlflow.source.git.commit
mlruns_old/540833891056875621/568880bf91b64b678b38932f1ae3f416/: meta.yaml
mlruns_old/540833891056875621/568880bf91b64b678b38932f1ae3f416/artifacts/reports/: experiment_summary.csv
mlruns_old/540833891056875621/568880bf91b64b678b38932f1ae3f416/metrics/: bias  eval_loss  prediction_x4  train_final_loss  weight
mlruns_old/540833891056875621/568880bf91b64b678b38932f1ae3f416/params/: experiment_name
mlruns_old/540833891056875621/92063a232eea46a0818fcbd7d3627da8/: meta.yaml
mlruns_old/540833891056875621/92063a232eea46a0818fcbd7d3627da8/artifacts/checkpoints/: linear_fast_model.txt
mlruns_old/540833891056875621/92063a232eea46a0818fcbd7d3627da8/artifacts/metrics/: linear_fast_eval_metrics.json
mlruns_old/540833891056875621/92063a232eea46a0818fcbd7d3627da8/metrics/: bias  eval_loss  prediction_x4  train_final_loss  weight
mlruns_old/540833891056875621/92063a232eea46a0818fcbd7d3627da8/params/: config_path
models/registry/: best_default_model.txt  deep_mlp_16_8_adam_he_model.txt  deep_mlp_8_4_adam_xavier_model.txt  linear_adam_model.txt  linear_fast_model.txt  linear_long_model.txt  linear_multi_model.txt  mlp_relu_model.txt  mlp_tanh_model.txt
results/: batch_summary.json  benchmark_report.md  experiment_summary.csv  promoted_default.json
scripts/: compare_experiments.py  evaluate_entry.py  export_model_params.py  mlflow_run.py  promote_best_config.py  report_best_experiments.py  run_experiment.py  run_experiment_batch.py  train_entry.py
src/: CMakeLists.txt
src/core/: eval.c  loss.c  matrix.c  model.c  runtime_model.c  tinyml.c  train.c
src/data/: dataset.c  normalization.c
src/io/: checkpoint.c  config.c  csv.c  metrics.c  normalization_io.c
src/layers/: dense.c
src/utils/: activation.c
tests/: CMakeLists.txt
tests/integration/: test_deep_mlp_forward.c  test_evaluate.c  test_linear_fit.c  test_mlp_forward.c  test_mlp_train_step.c  test_predict.c  test_predict_multi.c
tests/unit/: test_activation.c  test_batch_training.c  test_checkpoint.c  test_checkpoint_deep_mlp.c  test_checkpoint_mlp.c  test_checkpoint_multi.c  test_config.c  test_dataset.c  test_dataset_multi.c  test_dataset_split.c  test_dataset_split_three_way.c  test_deep_mlp.c  test_deep_mlp_train_step.c  test_dense.c  test_eval_empty_dataset.c  test_hidden_layers_parse.c  test_loss.c  test_matrix.c  test_mlp.c  test_model.c  test_normalization.c  test_smoke.c  test_training_step.c
(+79 files in other folders)
